content/howto/2021/serving_a_knative_function_on_the_root/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitgratitude-root
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-prod-nginx
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - gitgratitude.com
      secretName: gratitude-root-tls
  rules:
    - host: gitgratitude.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  homepage-proxy
                port:
                  number: 80
